--- a/src/components/Nav/MenuIcon/MenuIcon.css
+++ b/src/components/Nav/MenuIcon/MenuIcon.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   width: fit-content;
+  margin-left: auto;
   cursor: pointer;
   opacity: 0.7;
   z-index: 3;
