--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -3,13 +3,15 @@
   width: 35rem;
   max-width: 35rem;
   right: -200%;
+  bottom: 2rem;
   opacity: 0;
   transition: all 0.2s linear;
   scrollbar-color: black;
+  z-index: 1000;
 }
 
 .chatbox-container--active {
-  bottom: 2rem;
+  right: 2rem;
   left: 50%;
   transform: translateX(-50%);
   height: fit-content;
@@ -20,12 +22,14 @@
   font-family: sans-serif;
 }
 .rsc-header {
-  background-color: #f1aab1e3;
+  background-color: #f004728c;
   height: 3rem;
 }
 
 .rsc-header-title {
   text-align: center;
+  font-weight: 900;
+  letter-spacing: 0.08rem;
   width: 100%;
 }
 
@@ -48,13 +52,13 @@
 
 /* User */
 .rsc-ts-user .rsc-ts-bubble {
-  background-color: lightblue;
-  color: rgb(63, 62, 62);
+  background-color: rgba(79, 198, 235, 0.548);
+  color: rgb(0, 0, 0);
 }
 
 .chatbox__close {
   position: absolute;
-  top: 1rem;
+  top: 0.8rem;
   right: 2rem;
   color: white;
   cursor: pointer;
