--- a/src/components/ChatIcon/ChatIcon.css
+++ b/src/components/ChatIcon/ChatIcon.css
@@ -1,5 +1,28 @@
+.chat-icon-container {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 2rem;
+  right: 2rem;
+  background-color: #f00472;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  transition: all 0.2s linear;
+  z-index: 3;
+}
+
+.chat-icon-container--active {
+  display: none;
+  visibility: hidden;
+}
+
+.chat-icon-container:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
 .chat-icon {
-  background-color: black;
-  height: 4rem;
-  width: 4rem;
+  transform: scale(1.2);
 }
