--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,22 +1,27 @@
 .hero {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   max-width: 100%;
+  height: calc(100vh - 45px);
 }
 
 .hero__image-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: #ffdce0;
   width: 100%;
 }
 
 .hero__image {
+  width: 100%;
   max-width: 100%;
   max-height: 60vh;
+  min-height: 60vh;
   margin: auto;
+  object-fit: cover;
 }
 
 .hero__title {
