--- a/src/components/Nav/MenuIcon/MenuIcon.css
+++ b/src/components/Nav/MenuIcon/MenuIcon.css
@@ -5,7 +5,6 @@
   width: fit-content;
   margin-left: auto;
   cursor: pointer;
-  opacity: 0.7;
   z-index: 3;
 }
 
@@ -15,7 +14,7 @@
   height: 0.3rem;
   width: 2.5rem;
   border-radius: 1rem;
-  background-color: var(--almost-black);
+  background-color: black;
   transform-origin: right;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
