--- a/src/components/ChatIcon/ChatIcon.css
+++ b/src/components/ChatIcon/ChatIcon.css
@@ -10,6 +10,7 @@
   width: 5rem;
   border-radius: 50%;
   transition: all 0.2s linear;
+  box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 10px;
   z-index: 3;
 }
 
