--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,28 @@
-@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
+@font-face {
+  font-family: "geograph-bold";
+  src: url("./assets/geograph-edit-cufonfonts/geographwebbold.ttf");
+}
+@font-face {
+  font-family: "geograph-regular";
+  src: url("./assets/geograph-edit-cufonfonts/geographwebregular.ttf");
+}
+@font-face {
+  font-family: "geograph-light";
+  src: url("./assets/geograph-edit-cufonfonts/geographweblight.ttf");
+}
+
 @import url("./reset.css");
 
 :root {
   font-size: 62.5%;
   --almost-white: hsl(0, 0%, 98%);
   --medium-gray: hsl(0, 0%, 51%);
-  --almost-black: hsl(0, 0%, 8%);
+  --almost-black: rgb(33, 42, 47);
 }
 
 body {
   font-size: 1.8rem;
-  font-family: "Epilogue", sans-serif;
+  font-family: "geograph-regular", sans-serif;
 }
 
 a {
