--- a/src/components/Answer/Answer.css
+++ b/src/components/Answer/Answer.css
@@ -6,10 +6,10 @@
 .answer__item {
   display: flex;
   align-items: center;
-  width: clamp(25rem, 80%, 90rem);
+  width: clamp(25rem, 85%, 90rem);
   padding: 1rem;
   margin: 1rem 0;
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 0.5rem;
   font-family: "geograph-light";
   background-color: rgba(218, 210, 197, 0.2);
@@ -19,6 +19,15 @@
 .answer__item:hover {
   background-color: rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+
+.answer__item--active {
+  border-color: black;
+}
+
+.answer__item--active .answer__prefix {
+  color: white;
+  background-color: black;
 }
 
 .answer__prefix {
@@ -34,4 +43,12 @@
   font-family: "geograph-regular";
   font-weight: 900;
   background-color: white;
+}
+
+.answer__text {
+  width: 80%;
+}
+
+.answer__check-mark {
+  margin-left: auto;
 }
