--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -9,14 +9,23 @@
 }
 
 .question__content {
+  position: relative;
   display: flex;
-  transform: translateY(-50%);
+  flex-direction: column;
+  font-size: clamp(1.5rem, 2.5vw, 2.2rem);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.question__number {
+  position: absolute;
+  left: -2rem;
+  top: 0.3rem;
 }
 
 .question__title {
   letter-spacing: 0.1rem;
   line-height: 2.2rem;
-  font-size: clamp(1.5rem, 2.5vw, 2.2rem);
   font-family: "geograph-light";
   font-weight: 900;
 }
@@ -25,6 +34,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: fit-content;
   margin-top: 2rem;
   padding: 1rem 2rem;
   border: none;
