--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -8,6 +8,12 @@
   user-select: none;
 }
 
+.question__header {
+  font-weight: 900;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+
 .question__content {
   position: relative;
   display: flex;
