--- a/src/components/Result/Result.css
+++ b/src/components/Result/Result.css
@@ -1,12 +1,34 @@
 .result {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 0;
-  background-color: white;
-  height: 100%;
   width: 100%;
+  height: 100%;
+  background-color: white;
+  box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.3);
   animation: show-result 1s forwards;
 }
 
+.result__text {
+  text-align: center;
+  width: 80%;
+}
+
+.result__text em {
+  display: block;
+}
+
+@media only screen and (min-width: 768px) {
+  .result {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: clamp(15rem, 100%, 70vh);
+    width: clamp(15rem, 100%, 70vw);
+  }
+}
 @keyframes show-result {
   from {
     opacity: 0;
