--- a/src/Pages/SkinPage/SkinPage.css
+++ b/src/Pages/SkinPage/SkinPage.css
@@ -1,10 +1,10 @@
-.result {
+.skin-page {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.result__image {
+.skin-page__image {
   width: 100%;
   max-width: 100%;
   max-height: 60vh;
@@ -13,7 +13,7 @@
   object-fit: cover;
 }
 
-.result__title {
+.skin-page__title {
   margin-top: 3rem;
   margin-bottom: 3rem;
   font-size: 2.5rem;
@@ -23,14 +23,14 @@
   color: var(--almost-black);
 }
 
-.result__text {
+.skin-page__text {
   width: 95%;
   letter-spacing: 0.08rem;
   text-align: center;
   color: var(--almost-black);
 }
 
-.result__text em {
+.skin-page__text em {
   display: block;
   margin-top: 1rem;
   font-style: italic;
