--- a/src/components/ProductSection/ProductSection.css
+++ b/src/components/ProductSection/ProductSection.css
@@ -14,13 +14,13 @@
 
 .product-section__image {
   max-height: 15rem;
+  margin: 0 3rem;
   transform: translateY(15%);
   z-index: -1;
 }
 
 .product-section__text-container {
-  box-shadow: 0px -9px 11px -8px
-    rgba(0, 0, 0, 0.3);
+  box-shadow: 0px -9px 11px -8px rgba(0, 0, 0, 0.3);
   padding: 2rem;
 }
 
