Add dynamic rendering of prev-button in carousel

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -3,10 +3,16 @@
   overflow: hidden;
   max-width: 100%;
   margin-bottom: 5rem;
+  user-select: none;
 }
 
 .carousel__viewport {
   transition: all 0.2s linear;
+}
+
+.carousel .product-section {
+  margin: 1rem;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .carousel__button {
