--- a/src/components/Nav/MenuIcon/MenuIcon.css
+++ b/src/components/Nav/MenuIcon/MenuIcon.css
@@ -5,7 +5,7 @@
   width: fit-content;
   margin-left: auto;
   cursor: pointer;
-  z-index: 3;
+  z-index: 1000;
 }
 
 .menu-icon * {
@@ -17,12 +17,18 @@
   background-color: black;
   transform-origin: right;
   cursor: pointer;
-  transition: all 0.2s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-icon--mid {
   width: 50%;
   margin-left: auto;
+}
+
+.menu-icon--active {
+  position: fixed;
+  top: 1.1rem;
+  right: 1rem;
 }
 
 .menu-icon--active .menu-icon--top {
