--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,6 +3,7 @@ nav {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  min-height: 2.8rem;
   padding: 1rem;
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
 }
