Add nav menu for desktop view

--- a/src/components/Nav/Logo/Logo.css
+++ b/src/components/Nav/Logo/Logo.css
@@ -4,3 +4,10 @@
   align-items: center;
   margin-left: auto;
 }
+
+@media screen and (min-width: 1024px) {
+  .logo {
+    position: relative;
+    margin-left: 2rem;
+  }
+}
