--- a/src/components/Nav/MenuIcon/MenuIcon.css
+++ b/src/components/Nav/MenuIcon/MenuIcon.css
@@ -41,3 +41,9 @@
 .menu-icon--active .menu-icon--bot {
   transform: rotate(45deg);
 }
+
+@media screen and (min-width: 1024px) {
+  .menu-icon {
+    display: none;
+  }
+}
