--- a/src/components/Nav/MenuItems/MenuItems.css
+++ b/src/components/Nav/MenuItems/MenuItems.css
@@ -25,5 +25,29 @@
 
 .menu-items__link {
   letter-spacing: 0.08rem;
+  font-size: 2rem;
+  font-weight: 900;
   color: #4f4f4f;
+}
+
+@media screen and (min-width: 1024px) {
+  .menu-items {
+    position: relative;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    height: 100%;
+    opacity: 1;
+    z-index: 1;
+  }
+
+  .menu-items__item {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .menu-items__link {
+  }
 }
