--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -19,14 +19,16 @@
   display: flex;
   flex-direction: column;
   font-size: clamp(1.5rem, 2.5vw, 2.2rem);
-  overflow-y: auto;
-  overflow-x: hidden;
+  /* overflow-y: auto;
+  overflow-x: hidden; */
 }
 
 .question__number {
   position: absolute;
-  left: -2rem;
-  top: 0.3rem;
+  left: -2.5ch;
+  line-height: 2.2rem;
+  font-family: "geograph-light";
+  font-weight: 900;
 }
 
 .question__title {
