Add desktop background image

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -3,8 +3,10 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  height: fit-content;
   max-width: 100%;
-  height: calc(100vh - 45px);
+  max-height: 70rem;
+  padding-bottom: 4rem;
 }
 
 .hero__image-container {
@@ -19,9 +21,16 @@
   width: 100%;
   max-width: 100%;
   max-height: 60vh;
-  min-height: 60vh;
-  margin: auto;
+  content: url("../../assets/background-mobile.avif") !important;
   object-fit: cover;
+}
+
+.hero__call-to-action {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: fit-content;
 }
 
 .hero__title {
@@ -31,12 +40,15 @@
 }
 
 .hero__text {
+  height: fit-content;
+  width: 80%;
   font-size: 1.8rem;
   text-align: center;
   line-height: 2.2rem;
 }
 
 .hero__button {
+  width: fit-content;
   margin-top: 2rem;
   padding: 1.5rem 2rem;
   border: 2px solid white;
@@ -52,4 +64,15 @@
 .hero__button:hover {
   filter: invert(1);
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .hero__image {
+    max-height: 65vh;
+    content: url("../../assets/background-desktop.avif") !important;
+  }
+
+  .hero__text {
+    width: 100%;
+  }
 }
