--- a/src/components/Nav/MenuItems/MenuItems.css
+++ b/src/components/Nav/MenuItems/MenuItems.css
@@ -20,7 +20,7 @@
 }
 
 .menu-items__item {
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 .menu-items__link {
@@ -48,6 +48,9 @@
     align-items: center;
     justify-content: center;
   }
+
   .menu-items__link {
+    font-size: clamp(1.5rem, 1vw, 2rem);
+    font-weight: 900;
   }
 }
