--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,8 @@
 
 :root {
   font-size: 62.5%;
-  --almost-white: hsl(0, 0%, 98%);
-  --medium-gray: hsl(0, 0%, 51%);
-  --almost-black: rgb(33, 42, 47);
+  --purple: #c355ee;
+  --dark-purple: #51076e;
 }
 
 body {
