--- a/src/components/ChatPopup/ChatPopup.css
+++ b/src/components/ChatPopup/ChatPopup.css
@@ -5,7 +5,7 @@
   width: 20rem;
   padding: 1rem;
   font-size: 1.3rem;
-  border: 1px solid #faaab55b;
+  border: 1px solid var(--purple);
   border-radius: 2rem;
   border-bottom-right-radius: 0;
   background-color: white;
