--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,8 @@
 
 :root {
   font-size: 62.5%;
-  --purple: #c355ee;
-  --dark-purple: #51076e;
+  --purple: #b31aff;
+  --dark-purple: #550080;
 }
 
 body {
