--- a/src/components/ProductSection/ProductSection.css
+++ b/src/components/ProductSection/ProductSection.css
@@ -25,8 +25,10 @@
 }
 
 .product-section__text-container {
-  box-shadow: 0px -9px 11px -8px rgba(0, 0, 0, 0.3);
+  width: 80%;
+  margin: auto;
   padding: 2rem;
+  box-shadow: 0px -9px 11px -8px rgba(0, 0, 0, 0.3);
 }
 
 .product-section__title {
@@ -38,4 +40,10 @@
   margin-top: 0.5rem;
   font-size: 1.35rem;
   opacity: 0.5;
+}
+
+@media screen and (min-width: 768px) {
+  .product-section {
+    max-width: 60rem;
+  }
 }
